compiler/src/test/resources/golden/errors/type_cursor_is_opaque.err
error: arithmetic expects numbers, left side is Cursor
  --> type_cursor_is_opaque.dawn:6:11
  |
6 |   let d = c + 1
  |           ^
error: cannot print a value of type Cursor
  --> type_cursor_is_opaque.dawn:7:21
  |
7 |   println(to_string(c))
  |                     ^
  = hint: printable types are Int, Float, Bool, String, and `derive Show` values
